# chess_computer_graphics_polimi

./: .gitignore  CMakeLists.txt  MeshLoader.cpp  README.md  board.cpp  game.cpp  main.cpp  pieces.cpp  pieces.h  player.cpp
header/: board.h  game.h  player.h
headers/: board.h  const.hpp  game.h  pieces.h
modules/: Starter.hpp  TextMaker.hpp
shaders/: Shader.frag  Shader.vert  ShaderFrag.spv  ShaderVert.spv
